# DetectorClaw

./: .gitignore  AGENTS.md  ChatGPT-DetectorClaw 智能体设计.md  README.md  pyproject.toml  rcf_od_stack.py  rcf_register.py
configs/: rcf.example.yaml  rcf.huairou.yaml
detectorclaw/: __init__.py
detectorclaw/rcf/: __init__.py  autocrop.py  calibration.py  cli.py  config.py  gui.py  gui_state.py  io.py  live_browser.py  od_stack.py  pipeline.py  preview.py  register.py  runtime_cache.py  segment.py  shot_resolver.py  stack.py
docs/architecture/: detectorclaw-data-contracts.md  detectorclaw-online-diagnosis-v1.md
docs/devlogs/: 2026-03-23-rcf-gui-foundation.md  2026-03-24-native-preview-and-segmentation.md  2026-03-25-playwright-session-broker.md  2026-03-26-dose-and-repository-reorg.md  2026-03-27-native-dose-batch-acceleration.md  2026-05-26-project-recovery.md  README.md
docs/superpowers/plans/: 2026-03-23-detectorclaw-v1-implementation-plan.md
docs/superpowers/specs/: 2026-03-23-detectorclaw-design.md  2026-03-23-rcf-gui-auto-rectification-design.md
docs/workflows/: rcf-human-codex-debugging.md  rcf-iterative-validation.md
native/rcf_preview_core/: Cargo.toml  README.md
native/rcf_preview_core/src/: lib.rs  main.rs
reference/: README.md
reference/backgrounds/: README.md
reference/matlab/: RCF_RECT2.mlx  README.md
reference/shots/shot_001/: RCF1.json
scripts/: rcf_iterative_validation.py
tests/: test_rcf_calibration.py  test_rcf_cli.py  test_rcf_gui.py  test_rcf_live_browser_integration.py  test_rcf_preview.py  test_rcf_segment.py
