[project]
name = "detectorclaw"
version = "0.1.0"
description = "DetectorClaw RCF preprocessing tools"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "numpy",
  "opencv-python-headless",
  "Pillow",
  "PyYAML",
  "scipy",
  "scikit-image",
  "uvicorn",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not live_browser'"
markers = [
  "live_browser: requires real browser and GUI process",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["detectorclaw*"]
