[package]
name = "rcf_preview_core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
hex = "0.4"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "tiff"] }
imageproc = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10"
